--- a/src/pages/trending/dev_item/styles.less
+++ b/src/pages/trending/dev_item/styles.less
@@ -1,7 +1,7 @@
 .content {
   display: flex;
   flex-direction: row;
-  margin: 25px 20px;
+  margin: 30px;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.05);
@@ -16,7 +16,7 @@
 
 .user-name {
   color: #6190E8;
-  font-size: 34px;
+  font-size: 32px;
   margin-bottom: 5px;
 }
 
@@ -30,7 +30,7 @@
 .repo-title {
   margin-left: 10px;
   color: #666666;
-  font-size: 28px;
+  font-size: 24px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
