--- a/src/pages/trending/range/styles.less
+++ b/src/pages/trending/range/styles.less
@@ -7,7 +7,7 @@
   bottom: 0;
   right: 20px;
   z-index: 888;
-  background: #2d8cf0;
+  background: #1AAD19;
   color: #fff;
   font-size: 20px;
   padding: 15px;
@@ -18,4 +18,9 @@
   border-bottom: 1px solid #ddd;
   padding-bottom: 15px;
   margin-bottom: 15px;
+}
+
+
+.filter-wrap {
+  padding: 10px;
 }
