--- a/src/pages/repo/action/styles.less
+++ b/src/pages/repo/action/styles.less
@@ -20,5 +20,23 @@
     at-icon{
       margin-bottom: 10px;
     }
+    &:last-child {
+      padding: 0;
+    }
+    .share{
+      background: none;
+      display: flex;
+      flex-direction: column;
+      margin: 0;
+      padding: 0;
+      color: #666;
+      line-height: 1.2;
+      width: 100%;
+      font-size: 20px;
+      padding: 20px 0;
+      &::after{
+        border: none;
+      }
+    }
   }
 }
