--- a/src/pages/repo/index.less
+++ b/src/pages/repo/index.less
@@ -32,11 +32,23 @@
   margin-bottom: 10px;
   background: #ffffff;
   border-bottom: 1px solid #f2f2f2;
+}
+
+.owner-text {
+  margin-left: 20px;
+  margin-right: auto;
   .owner-name {
     color: #333333;
     font-size: 36px;
-    margin-left: 10px;
-    margin-right: auto;
+    margin-bottom: 10px;
+  }
+  .owner-meta {
+    color: #999;
+    font-size: 24px;
+    .num{
+      color: #333;
+      margin-right: 20px;
+    }
   }
 }
 
