用户关注、用户登录

--- a/src/pages/repo/action/styles.less
+++ b/src/pages/repo/action/styles.less
@@ -17,6 +17,11 @@
     align-items: center;
     justify-content: center;
     padding: 20px 0;
+    &.active {
+      at-icon {
+        color: #5c89e4;
+      }
+    }
     at-icon{
       margin-bottom: 10px;
     }
