--- a/src/pages/my/index.less
+++ b/src/pages/my/index.less
@@ -1,47 +1,56 @@
+.modal-wrap {
+  .at-modal-content {
+    min-height: 0;
+  }
+}
+
 .my-container {
-    // padding: 15px;
+  // padding: 15px;
 }
+
 .my-header {
-    display: flex;
-    align-items: center;
-    background: #ffffff;
-    padding: 30px;
-    margin-bottom: 10px;
-    .avatar {
-        width: 100px;
-        height: 100px;
-        border-radius: 8px;
-        margin-right: 20px;
-    }
-    .my-info{
-        margin-right: auto;
-    }
-    .username {
-        color: #333333;
-        font-size: 28px;
-        margin-bottom: 10px;
-    }
-    .meta-wrap{
-        color: #999;
-        font-size: 24px;
-        .num {
-            color: #333333;
-            margin-right: 30px;
-        }
-    }
-}
-.my-list {
-    margin-bottom: 10px;
-}
-.my-item{
-    height: 80px;
+  display: flex;
+  align-items: center;
+  background: #ffffff;
+  padding: 30px;
+  margin-bottom: 10px;
+  .avatar {
+    width: 100px;
+    height: 100px;
+    border-radius: 8px;
+    margin-right: 20px;
+  }
+  .my-info {
+    margin-right: auto;
+  }
+  .username {
+    color: #333333;
     font-size: 28px;
-    display: flex;
-    align-items: center;
-    background: #ffffff;
-    padding: 0 30px;
-    border-bottom: 1px solid #f2f2f2;
-    .title {
-        margin-right: auto;
+    margin-bottom: 10px;
+  }
+  .meta-wrap {
+    color: #999;
+    font-size: 24px;
+    .num {
+      color: #333333;
+      margin-right: 30px;
     }
+  }
+}
+
+.my-list {
+  margin-bottom: 10px;
+}
+
+.my-item {
+  height: 80px;
+  font-size: 28px;
+  display: flex;
+  align-items: center;
+  background: #ffffff;
+  padding: 0 30px;
+  border-bottom: 1px solid #f2f2f2;
+  .title {
+    margin-right: auto;
+  }
 }
