--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -11,7 +11,7 @@
 .login-form {
     background: #ffffff;
     padding: 40px;
-    border-radius: 4px;
+    border-radius: 8px;
     width: 80%;
     border: 1px solid #efefef;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.05);
@@ -22,8 +22,13 @@
     input {
         height: 80px;
         margin-bottom: 20px;
-        border: 1px solid #efefef;
+        border-radius: 8px;
+        border-bottom: 1px solid #efefef;
         font-size: 28px;
         padding-left: 10px;
+    }
+    button {
+        background: #5c89e4;
+        margin-top: 40px;
     }
 }
